remove vertx web client, add more tests