@@ -3,17 +3,17 @@ package com.flipkart.varadhi.auth;
 import com.flipkart.varadhi.authz.AuthorizationProvider;
 import com.flipkart.varadhi.config.AuthorizationOptions;
 import com.flipkart.varadhi.config.DefaultAuthorizationConfiguration;
-import com.flipkart.varadhi.entities.ResourceAction;
-import com.flipkart.varadhi.entities.ResourceType;
 import com.flipkart.varadhi.entities.Role;
-import com.flipkart.varadhi.entities.UserContext;
+import com.flipkart.varadhi.entities.auth.ResourceAction;
+import com.flipkart.varadhi.entities.auth.ResourceType;
 import com.flipkart.varadhi.entities.auth.RoleBindingNode;
+import com.flipkart.varadhi.entities.auth.UserContext;
 import com.flipkart.varadhi.exceptions.IllegalArgumentException;
+import com.flipkart.varadhi.services.AuthZService;
+import com.flipkart.varadhi.spi.db.MetaStoreOptions;
+import com.flipkart.varadhi.spi.db.MetaStoreProvider;
 import com.flipkart.varadhi.utils.YamlLoader;
 import io.vertx.core.Future;
-import io.vertx.core.Vertx;
-import io.vertx.ext.web.client.WebClient;
-import io.vertx.ext.web.codec.BodyCodec;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
@@ -22,24 +22,40 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 
+import static com.flipkart.varadhi.utils.LoaderUtils.loadClass;
+
 
 @Slf4j
 public class DefaultAuthorizationProvider implements AuthorizationProvider {
     private static final Role EMPTY_ROLE = new Role("", Set.of());
     private DefaultAuthorizationConfiguration configuration;
-    private WebClient webClient;
+    private AuthZService authZService;
     private volatile boolean initialised = false;
 
     @Override
-    public synchronized Future<Boolean> init(AuthorizationOptions authorizationOptions) {
+    public Future<Boolean> init(AuthorizationOptions authorizationOptions) {
         if (!this.initialised) {
             this.configuration =
                     YamlLoader.loadConfig(
                             authorizationOptions.getConfigFile(), DefaultAuthorizationConfiguration.class);
-            this.webClient = WebClient.create(Vertx.vertx());
+            getAuthZService();
             this.initialised = true;
         }
         return Future.succeededFuture(true);
+    }
+
+    protected AuthZService getAuthZService() {
+        if (this.initialised) {
+            return this.authZService;
+        }
+        this.authZService = initAuthZService(this.configuration.getMetaStoreOptions());
+        return this.authZService;
+    }
+
+    private AuthZService initAuthZService(MetaStoreOptions metaStoreOptions) {
+        MetaStoreProvider provider = loadClass(metaStoreOptions.getProviderClassName());
+        provider.init(metaStoreOptions);
+        return new AuthZService(provider.getMetaStore());
     }
 
     /**
@@ -57,17 +73,16 @@ public class DefaultAuthorizationProvider implements AuthorizationProvider {
         if (!initialised) {
             throw new IllegalStateException("Default Authorization Provider is not initialised.");
         }
-        List<Pair<ResourceType, String>> leafToRootResourceIds = generatePolicyPathsForResource(action, resource);
+        List<Pair<ResourceType, ResourceContext>> leafToRootResourceIds =
+                generateResourceContextHierarchy(action, resource);
         if (leafToRootResourceIds.isEmpty()) {
             return Future.succeededFuture(false);
         }
 
-        List<Future<Boolean>> futures =
-                leafToRootResourceIds.stream().filter(pair -> StringUtils.isNotBlank(pair.getValue()))
-                        .map(pair -> isAuthorizedInternal(userContext.getSubject(), action, pair.getValue()))
-                        .toList();
-        // succeeded future denotes successful authorization
-        return Future.any(futures).transform(result -> Future.succeededFuture(result.succeeded()));
+        boolean result =
+                leafToRootResourceIds.stream()
+                        .anyMatch(pair -> isAuthorizedInternal(userContext.getSubject(), action, pair.getValue()));
+        return Future.succeededFuture(result);
     }
 
     /**
@@ -75,68 +90,57 @@ public class DefaultAuthorizationProvider implements AuthorizationProvider {
      *
      * @param resourcePath uri of the resource
      *
-     * @return List of pairs having resource type to its id. List is used so that we can impose ordering from leaf to root nodes.
+     * @return List of pairs having resource type to its context. List is used so that we can impose ordering from leaf to root nodes.
      */
-    private List<Pair<ResourceType, String>> generatePolicyPathsForResource(
+    private List<Pair<ResourceType, ResourceContext>> generateResourceContextHierarchy(
             ResourceAction action, String resourcePath
     ) {
+        if (StringUtils.isBlank(resourcePath)) {
+            return List.of();
+        }
+
         String[] segments = resourcePath.split("/");
 
         // build the list in reverse order specified: ROOT -> ORG -> TEAM -> PROJECT -> TOPIC|SUBSCRIPTION|QUEUE
-        List<Pair<ResourceType, String>> resourceIdTuples = new ArrayList<>();
-        addGetPolicyPathForLeafNode(resourceIdTuples, action, segments);
-        addGetPolicyPathForProjectNode(resourceIdTuples, segments);
-        addGetPolicyPathForTeamNode(resourceIdTuples, segments);
-        addGetPolicyPathForOrgNode(resourceIdTuples, segments);
+        List<Pair<ResourceType, ResourceContext>> resourceContextTuples = new ArrayList<>();
+        addResourceContextForLeafNode(resourceContextTuples, action, segments);
+        addResourceContextForProjectNode(resourceContextTuples, segments);
+        addResourceContextForTeamNode(resourceContextTuples, segments);
+        addResourceContextForOrgNode(resourceContextTuples, segments);
 
-        return resourceIdTuples;
+        return resourceContextTuples;
     }
 
     /**
      * Authorize subject against a single resource.
      * Succeeds the future if user is authorized, otherwise fails the future.
      *
-     * @param subject            user identifier to be authorized
-     * @param action             action requested by the subject which needs authorization
-     * @param resourcePolicyPath get IAM Policy path under whose scope the check will be performed
+     * @param subject         user identifier to be authorized
+     * @param action          action requested by the subject which needs authorization
+     * @param resourceContext record holding the resource type, id and policy path
      *
-     * @return {@code Future<Boolean>} return a future of true or failed future if not authorized
+     * @return {@code boolean} return whether the user is authorized or not
      */
-    private Future<Boolean> isAuthorizedInternal(String subject, ResourceAction action, String resourcePolicyPath) {
+    private boolean isAuthorizedInternal(
+            String subject, ResourceAction action, ResourceContext resourceContext
+    ) {
         log.debug(
                 "Checking authorization for subject [{}] and action [{}] on resource [{}]", subject, action,
-                resourcePolicyPath
+                resourceContext.policyPath()
         );
-        return getRolesForSubject(subject, resourcePolicyPath)
-                .compose(roles -> (checkAllRoles(subject, roles, action)) ?
-                        Future.succeededFuture(true)
-                        :
-                        Future.failedFuture("Not authorized"));
+        return getRolesForSubject(subject, resourceContext)
+                .stream().anyMatch(role -> doesActionBelongToRole(subject, role, action));
     }
 
-
-    protected Future<Set<String>> getRolesForSubject(String subject, String resourcePolicyPath) {
-        // use web client to make get call
-        return webClient.get(
-                        configuration.getAuthZServerPort(), configuration.getAuthZServerHost(),
-                        String.join("/", "/v1", resourcePolicyPath, "policy")
-                )
-                .as(BodyCodec.json(RoleBindingNode.class))
-                .send()
-                .compose(response -> {
-                    RoleBindingNode node = response.body();
-                    if (node == null || node.getSubjectToRolesMapping() == null) {
-                        return Future.failedFuture("No roles on resource for subject" + subject);
-                    }
-                    log.info(
-                            "Fetched roles for subject [{}] and resource [{}] status: {}", subject, resourcePolicyPath,
-                            response.statusCode()
-                    );
-                    return Future.succeededFuture(node.getSubjectToRolesMapping().getOrDefault(subject, Set.of()));
-                })
-                .onFailure(err -> log.error("Error while fetching roles for subject [{}] and resource [{}]",
-                        subject, resourcePolicyPath, err
-                ));
+    private Set<String> getRolesForSubject(String subject, ResourceContext resourceContext) {
+        RoleBindingNode node =
+                getAuthZService().getIAMPolicy(resourceContext.resourceType(), resourceContext.resourceId());
+        if (node == null) {
+            log.error("No roles on resource for subject {}", subject);
+            return Set.of();
+        }
+        log.info("Fetched roles for subject [{}] and resource [{}]", subject, resourceContext.policyPath());
+        return node.getSubjectToRolesMapping().getOrDefault(subject, Set.of());
     }
 
     private boolean doesActionBelongToRole(String subject, String roleId, ResourceAction action) {
@@ -149,44 +153,68 @@ public class DefaultAuthorizationProvider implements AuthorizationProvider {
         return matching;
     }
 
-    private boolean checkAllRoles(String subject, Set<String> roles, ResourceAction action) {
-        return roles.stream().anyMatch(role -> doesActionBelongToRole(subject, role, action));
+    private void addResourceContextForOrgNode(
+            List<Pair<ResourceType, ResourceContext>> resourceIdTuples, String[] segments
+    ) {
+        resourceIdTuples.add(Pair.of(
+                ResourceType.ORG,
+                new ResourceContext(ResourceType.ORG, segments[0], "/orgs/%s".formatted(segments[0]))
+        ));
     }
 
-    private void addGetPolicyPathForOrgNode(List<Pair<ResourceType, String>> resourceIdTuples, String[] segments) {
-        if (segments.length > 0) {
-            resourceIdTuples.add(Pair.of(ResourceType.ORG, String.format("/orgs/%s", segments[0])));
-        }
-    }
-
-    private void addGetPolicyPathForTeamNode(List<Pair<ResourceType, String>> resourceIdTuples, String[] segments) {
+    private void addResourceContextForTeamNode(
+            List<Pair<ResourceType, ResourceContext>> resourceIdTuples, String[] segments
+    ) {
         if (segments.length > 1) {
             // /orgs/:org/teams/:team
             resourceIdTuples.add(
-                    Pair.of(ResourceType.TEAM, String.format("/orgs/%s/teams/%s", segments[0], segments[1])));
+                    Pair.of(
+                            ResourceType.TEAM,
+                            new ResourceContext(
+                                    ResourceType.TEAM, "%s:%s".formatted(segments[0], segments[1]),
+                                    "/orgs/%s/teams/%s".formatted(segments[0], segments[1])
+                            )
+                    ));
         }
     }
 
-    private void addGetPolicyPathForProjectNode(List<Pair<ResourceType, String>> resourceIdTuples, String[] segments) {
+    private void addResourceContextForProjectNode(
+            List<Pair<ResourceType, ResourceContext>> resourceIdTuples, String[] segments
+    ) {
         if (segments.length > 2) {
-            resourceIdTuples.add(Pair.of(ResourceType.PROJECT, String.format("/projects/%s", segments[2])));
+            resourceIdTuples.add(Pair.of(
+                    ResourceType.PROJECT,
+                    new ResourceContext(ResourceType.PROJECT, segments[2], "/projects/%s".formatted(segments[2]))
+            ));
         }
     }
 
-    private void addGetPolicyPathForLeafNode(
-            List<Pair<ResourceType, String>> resourceIdTuples, ResourceAction action, String[] segments
+    private void addResourceContextForLeafNode(
+            List<Pair<ResourceType, ResourceContext>> resourceIdTuples, ResourceAction action, String[] segments
     ) {
         if (segments.length > 3) {
             // /projects/:project/[topics|subs]/:[topic|sub]
             switch (action.getResourceType()) {
-                case TOPIC -> resourceIdTuples.add(
-                        Pair.of(ResourceType.TOPIC, String.format("/projects/%s/topics/%s", segments[2], segments[3])));
-                case SUBSCRIPTION -> resourceIdTuples.add(Pair.of(ResourceType.SUBSCRIPTION,
-                        String.format("/projects/%s/subscriptions/%s", segments[2], segments[3])
+                case TOPIC -> resourceIdTuples.add(Pair.of(
+                        ResourceType.TOPIC,
+                        new ResourceContext(
+                                ResourceType.TOPIC, "%s:%s".formatted(segments[2], segments[3]),
+                                "/projects/%s/topics/%s".formatted(segments[2], segments[3])
+                        )
+                ));
+                case SUBSCRIPTION -> resourceIdTuples.add(Pair.of(
+                        ResourceType.SUBSCRIPTION,
+                        new ResourceContext(
+                                ResourceType.SUBSCRIPTION, "%s:%s".formatted(segments[2], segments[3]),
+                                "/projects/%s/subscriptions/%s".formatted(segments[2], segments[3])
+                        )
                 ));
                 default -> throw new IllegalArgumentException(
                         "Invalid resource type under project : " + action.getResourceType());
             }
         }
+    }
+
+    private record ResourceContext(ResourceType resourceType, String resourceId, String policyPath) {
     }
 }
